# AlbionTools

./: .gitignore  .rules  AI_Rules.md  DEBUG-GUIDE  Makefile  PROJECT.md  README.md  TRACKING.md  start.sh
.claude/: settings.local.json
.roo/rules/: rules.md
Docs/: albion-auto-seller-plan.md
backend/: go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/api/: handlers.go
backend/internal/db/: repository.go
backend/internal/models/: models.go
backend/internal/websocket/: hub.go
bot/: main.py  pyproject.toml
bot/albion_bot/: debug_logger.py  logging_config.py
bot/albion_bot/calibration/: capture_server.py  models.py  screen.py  screenshot_helper.py  wizard.py
bot/albion_bot/db/: connection.py  items.py  models.py  seed.py
bot/albion_bot/gui/: app.py  bot_tab.py  calibration_tab.py  config_tab.py  overlay.py  widgets.py
bot/albion_bot/inventory/: empty_slot.py  models.py  scanner.py
bot/albion_bot/ocr/: reader.py
bot/albion_bot/platform/: base.py  linux.py  windows.py
bot/albion_bot/selling/: config.py  detection.py  loop.py  market.py  models.py  price.py
docs/: installation.md  sell-order-ocr-outlier-plan.md  thread1.md
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/public/assets/i18n/: en.json  vi.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/pages/bot-status/: bot-status.component.html  bot-status.component.ts
frontend/src/app/services/: api.service.ts  websocket.service.ts
(+12 files in other folders)
