[project]
name = "albion-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.3",
    "mss>=10.2.0",
    "opencv-python>=4.13.0.92",
    "paddleocr>=3.5.0",
    "pydantic>=2.13.4",
    "pymongo>=4.17.0",
    "python-xlib>=0.33",
    "customtkinter>=5.2.2",
]
